Use Optional for RawRequest/RawResponse body and safe deserialization
Change RawRequest.body and RawResponse.body from byte[] to Optional<byte[]>.
Update the Java emitter to use .map()/.orElse(null) for safe body
deserialization and Optional.ofNullable()/Optional.empty() for serialization.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>